--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXRKM8W" height="0" width="0"
         style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+    <p>Ejemplo de pág de Ayto.Madrid</p>
 </body>
 
 </html>
